[gd_scene load_steps=19 format=3 uid="uid://c7f35axhxuuuj"]

[ext_resource type="Script" path="res://Skripts/Inventory/inventory.gd" id="1_hbb5x"]
[ext_resource type="Shader" path="res://Artwork/Shader/blur.gdshader" id="1_yh3gs"]
[ext_resource type="PackedScene" path="res://UI/Overhead.tscn" id="3_i33el"]
[ext_resource type="Script" path="res://Skripts/UI/BookTexture.gd" id="4_dknsn"]
[ext_resource type="PackedScene" uid="uid://dqvr07s5e65ji" path="res://UI/Inventory/ItemSlot.tscn" id="4_rmvdj"]
[ext_resource type="Texture2D" uid="uid://c6rx8x4jbpmnw" path="res://Artwork/Atlase/Assets/Book/Book_empty.png" id="4_s5puh"]
[ext_resource type="Texture2D" uid="uid://ckygv1vcukr3v" path="res://Artwork/Atlase/Assets/Book/Book_phase1.png" id="6_dpd74"]
[ext_resource type="Texture2D" uid="uid://b48yw80va6e5r" path="res://Artwork/Atlase/Assets/Buttons/Close_normal.png" id="6_fuuh1"]
[ext_resource type="Texture2D" uid="uid://da1qd51wtp0ri" path="res://Artwork/Atlase/Assets/Book/Book_phase2.png" id="7_hb11o"]
[ext_resource type="Texture2D" uid="uid://bbebnop7ilw7k" path="res://Artwork/Atlase/Assets/Buttons/Close_hover.png" id="7_v38xv"]
[ext_resource type="Texture2D" uid="uid://cdx1x4c3vxyt2" path="res://Artwork/Atlase/Assets/Buttons/Close_pressed.png" id="8_02p7v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iwxey"]
shader = ExtResource("1_yh3gs")
blur = 2.5
brightness = 1.0

[sub_resource type="InputEventAction" id="InputEventAction_v55vy"]
action = &"inventory"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_01kie"]
events = [SubResource("InputEventAction_v55vy")]

[sub_resource type="Animation" id="Animation_fgvrp"]
resource_name = "Pause"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 2.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [1.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_6yash"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1xaks"]
resource_name = "Unpause"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v1ghc"]
_data = {
"Pause": SubResource("Animation_fgvrp"),
"RESET": SubResource("Animation_6yash"),
"Unpause": SubResource("Animation_1xaks")
}

[node name="Inventory" type="ColorRect"]
process_mode = 3
self_modulate = Color(0.313726, 0.313726, 0.313726, 0.584314)
material = SubResource("ShaderMaterial_iwxey")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hbb5x")

[node name="Overhead" parent="." instance=ExtResource("3_i33el")]
layout_mode = 1

[node name="centerContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="Book" type="TextureRect" parent="centerContainer"]
texture_filter = 1
custom_minimum_size = Vector2(800, 440)
layout_mode = 2
offset_left = 80.0
offset_top = 50.0
offset_right = 880.0
offset_bottom = 490.0
texture = ExtResource("4_s5puh")
script = ExtResource("4_dknsn")
inv6Slots = ExtResource("6_dpd74")
inv18Slots = ExtResource("7_hb11o")
inv30Slots = ExtResource("4_s5puh")

[node name="Slots" type="Control" parent="centerContainer/Book"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="InventorySlots" type="GridContainer" parent="centerContainer/Book/Slots"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 430.0
offset_top = 76.0
offset_right = 780.0
offset_bottom = 364.0
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 6

[node name="ItemSlot" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2

[node name="ItemSlot2" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 60.0
offset_right = 108.0

[node name="ItemSlot3" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 120.0
offset_right = 168.0

[node name="ItemSlot4" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 180.0
offset_right = 228.0

[node name="ItemSlot5" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 240.0
offset_right = 288.0

[node name="ItemSlot6" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 300.0
offset_right = 348.0

[node name="ItemSlot7" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_top = 60.0
offset_bottom = 108.0

[node name="ItemSlot8" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 60.0
offset_top = 60.0
offset_right = 108.0
offset_bottom = 108.0

[node name="ItemSlot9" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 120.0
offset_top = 60.0
offset_right = 168.0
offset_bottom = 108.0

[node name="ItemSlot10" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 180.0
offset_top = 60.0
offset_right = 228.0
offset_bottom = 108.0

[node name="ItemSlot11" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 240.0
offset_top = 60.0
offset_right = 288.0
offset_bottom = 108.0

[node name="ItemSlot12" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 300.0
offset_top = 60.0
offset_right = 348.0
offset_bottom = 108.0

[node name="ItemSlot13" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_top = 120.0
offset_bottom = 168.0

[node name="ItemSlot14" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 60.0
offset_top = 120.0
offset_right = 108.0
offset_bottom = 168.0

[node name="ItemSlot15" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 120.0
offset_top = 120.0
offset_right = 168.0
offset_bottom = 168.0

[node name="ItemSlot16" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 180.0
offset_top = 120.0
offset_right = 228.0
offset_bottom = 168.0

[node name="ItemSlot17" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 240.0
offset_top = 120.0
offset_right = 288.0
offset_bottom = 168.0

[node name="ItemSlot18" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 300.0
offset_top = 120.0
offset_right = 348.0
offset_bottom = 168.0

[node name="ItemSlot19" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_top = 180.0
offset_bottom = 228.0

[node name="ItemSlot20" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 60.0
offset_top = 180.0
offset_right = 108.0
offset_bottom = 228.0

[node name="ItemSlot21" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 120.0
offset_top = 180.0
offset_right = 168.0
offset_bottom = 228.0

[node name="ItemSlot22" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 180.0
offset_top = 180.0
offset_right = 228.0
offset_bottom = 228.0

[node name="ItemSlot23" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 240.0
offset_top = 180.0
offset_right = 288.0
offset_bottom = 228.0

[node name="ItemSlot24" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 300.0
offset_top = 180.0
offset_right = 348.0
offset_bottom = 228.0

[node name="ItemSlot25" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_top = 240.0
offset_bottom = 288.0

[node name="ItemSlot26" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 60.0
offset_top = 240.0
offset_right = 108.0
offset_bottom = 288.0

[node name="ItemSlot27" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 120.0
offset_top = 240.0
offset_right = 168.0
offset_bottom = 288.0

[node name="ItemSlot28" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 180.0
offset_top = 240.0
offset_right = 228.0
offset_bottom = 288.0

[node name="ItemSlot29" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 240.0
offset_top = 240.0
offset_right = 288.0
offset_bottom = 288.0

[node name="ItemSlot30" parent="centerContainer/Book/Slots/InventorySlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_left = 300.0
offset_top = 240.0
offset_right = 348.0
offset_bottom = 288.0

[node name="Equipment Slots" type="GridContainer" parent="centerContainer/Book/Slots"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 30.0
offset_top = 75.0
offset_right = 78.0
offset_bottom = 367.0
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="ItemSlot" parent="centerContainer/Book/Slots/Equipment Slots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
mainType = 1
itemType = 6
itemSubType = 4

[node name="ItemSlot2" parent="centerContainer/Book/Slots/Equipment Slots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_top = 60.0
offset_bottom = 108.0
mainType = 1
itemType = 6
itemSubType = 7

[node name="ItemSlot3" parent="centerContainer/Book/Slots/Equipment Slots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_top = 120.0
offset_bottom = 168.0
mainType = 1
itemType = 6
itemSubType = 6

[node name="ItemSlot4" parent="centerContainer/Book/Slots/Equipment Slots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_top = 180.0
offset_bottom = 228.0
mainType = 1
itemType = 6
itemSubType = 5

[node name="AccesoirSlots" type="GridContainer" parent="centerContainer/Book/Slots"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 338.0
offset_top = 75.0
offset_right = 386.0
offset_bottom = 367.0
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="ItemSlot" parent="centerContainer/Book/Slots/AccesoirSlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
mainType = 2
itemType = 6
itemSubType = 3

[node name="ItemSlot2" parent="centerContainer/Book/Slots/AccesoirSlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_top = 60.0
offset_bottom = 108.0
mainType = 2
itemType = 6
itemSubType = 3

[node name="ItemSlot3" parent="centerContainer/Book/Slots/AccesoirSlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_top = 120.0
offset_bottom = 168.0
mainType = 2
itemType = 6
itemSubType = 2

[node name="ItemSlot4" parent="centerContainer/Book/Slots/AccesoirSlots" instance=ExtResource("4_rmvdj")]
layout_mode = 2
offset_top = 180.0
offset_bottom = 228.0
mainType = 2
itemType = 6
itemSubType = 2

[node name="ExitButton" type="TextureButton" parent="centerContainer/Book"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 705.0
offset_top = 26.0
offset_right = 777.0
offset_bottom = 57.0
shortcut_in_tooltip = false
shortcut = SubResource("Shortcut_01kie")
texture_normal = ExtResource("6_fuuh1")
texture_pressed = ExtResource("7_v38xv")
texture_hover = ExtResource("8_02p7v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Unpause"
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_v1ghc")
}

[node name="timer" type="Timer" parent="."]

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
